# Coursework_1

./: README.md  main.py  pyproject.toml
src/: get_currency_rate.py  simple_search.py  spending_by_category.py  top_transactions.py  utils.py  value_of_shares.py  views.py
tests/: test_get_currency_rate.py  test_get_data_from_file.py  test_greeting_by_time.py  test_simple_search.py  test_spending_by_category.py  test_top_transactions.py  test_value_of_shares.py  test_views.py
